[gd_scene load_steps=11 format=3 uid="uid://byb1iiclqdo2o"]

[ext_resource type="Script" path="res://escenas/jugador.gd" id="1_bfwnr"]
[ext_resource type="Texture2D" uid="uid://cq1rrswpefcw8" path="res://graficos/ships/ship_0002.png" id="2_u65f5"]
[ext_resource type="Texture2D" uid="uid://ckxw5mjt6vi61" path="res://graficos/tiles/tile_0004.png" id="3_0akdb"]
[ext_resource type="Texture2D" uid="uid://bk0di4kepbf1t" path="res://graficos/tiles/tile_0005.png" id="4_ia6y7"]
[ext_resource type="Texture2D" uid="uid://dwr82bd76pckr" path="res://graficos/tiles/tile_0006.png" id="5_awhvu"]
[ext_resource type="Texture2D" uid="uid://dx5y0dgmix3er" path="res://graficos/tiles/tile_0007.png" id="6_c0sb2"]
[ext_resource type="Texture2D" uid="uid://b8to674csbe6o" path="res://graficos/tiles/tile_0008.png" id="7_3c8tk"]
[ext_resource type="AudioStream" uid="uid://dymvp21amshl5" path="res://audio/explosionCrunch_001.ogg" id="8_jamc6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s1nmo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_u65f5")
}, {
"duration": 1.0,
"texture": ExtResource("3_0akdb")
}, {
"duration": 1.0,
"texture": ExtResource("4_ia6y7")
}, {
"duration": 1.0,
"texture": ExtResource("5_awhvu")
}, {
"duration": 1.0,
"texture": ExtResource("6_c0sb2")
}, {
"duration": 1.0,
"texture": ExtResource("7_3c8tk")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explota",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1x4e"]
size = Vector2(22, 10)

[node name="Jugador" type="Area2D"]
script = ExtResource("1_bfwnr")

[node name="Sombra" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.372549)
position = Vector2(3, 3)
texture = ExtResource("2_u65f5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s1nmo")
animation = &"explota"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_p1x4e")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jamc6")
volume_db = -15.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -100)
limit_left = -20
limit_right = 340
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_bottom_margin = 0.8

[node name="TimerDisparo" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="TimerDisparo" to="." method="_on_timer_disparo_timeout"]
